@@ -1,5 +1,11 @@
 2000-09-08  Frank Ch. Eigler  <fche@redhat.com>
 
+	* rtl-c.scm (s-sequence): Handle nested c-calls in both
+	statement-expression and comma-expression contexts.
+	(s-c-call, s-c-raw-call): Add warning comment about bad assumption.
+
+2000-09-08  Frank Ch. Eigler  <fche@redhat.com>
+
 	* decode.scm (-population-top-few): Signal error gracefully if
 	decoding is about to become ambiguous.
 
